--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,21 +1,38 @@
 version: v1.0
-name: Test MyApp
+name: Address Book
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu2004
 blocks:
-  - name: Test
+  - name: Install dependencies
     task:
+      env_vars:
+        - name: NODE_ENV
+          value: test
+      prologue:
+        commands:
+          - checkout
+          - nvm use
       jobs:
-        - name: Test
+        - name: npm install and cache
           commands:
-            - checkout
-            - sem-version node 19
             - cache restore
             - npm install
             - cache store
-            - npm run build --if-present
-            - npm test
-      secrets:
-        - name: env-production
+  - name: Tests
+    task:
+      jobs: []
+    env_vars:
+      - name: NODE_ENV
+        value: test
+    prologue:
+      commands:
+        - checkout
+        - nvm use
+        - cache restore
+    jobs:
+      - name: Unit Test
+        commands:
+          - sem-service start postgres
+          - npm run test
